src/test/deca/syntax/parser/valid/test/test_pars_val_instruction_inequality_expr_multiple1.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour les eq_neq_expr multiples.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    instruction_bidon <= instruction_bidon2 > instruction_bidon3 <= 1234 >456;
}